clusters/talos-cluster/mimir/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mimir-deployment
  namespace: mimir
  labels:
    app: mimir
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mimir
  template:
    metadata:
      labels:
        app: mimir
    spec:
      containers:
        - name: mimir
          image: zot.maix.ovh/mimir:v0.0.33@sha256:8e88a17fbbec573ad35fbb847ed402f81b1d47923388fda729e6f649e22738bd
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
      imagePullSecrets:
        - name: zot-pull-secret
