clusters/talos-cluster/mimir/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mimir-service
  namespace: mimir
spec:
  selector:
    app: mimir
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
