clusters/talos-cluster/mimir/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mimir-route
  namespace: mimir
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "mimir.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 300s
        backendRequest: 300s
      backendRefs:
        - name: mimir-service
          port: 3000
